<resources>
    <string name="app_name">FLO</string>
    <string name="common_findId">아이디 찾기</string>
    <string name="common_findBetween">|</string>
    <string name="common_findPassword">비밀번호찾기</string>
    <string name="main_home_title">홈</string>
    <string name="main_browse_title">둘러보기</string>
    <string name="main_search_title">검색</string>
    <string name="main_storage_title">보관함</string>
    <string name="main_songTitle">재생목록이 비었습니다.</string>
    <string name="home_tv_top_panel_title1">오늘 수고한</string>
    <string name="home_tv_top_panel_title2">나를 위한</string>
    <string name="home_tv_top_panel_title3">재즈 선물</string>
    <string name="home_tv_top_panel_song_count1">총</string>
    <string name="home_tv_top_panel_song_count">34</string>
    <string name="home_tv_top_panel_song_count2">곡</string>
    <string name="home_tv_top_panel_song_updateTime">2021.01.15</string>
    <string name="setting_tv_login_before1">로그인하지 않은 상태입니다.</string>
    <string name="setting_tv_login_before2">로그인 / 회원가입 후 이용해주세요.</string>
    <string name="setting_btn_login_before">로그인 / 회원가입</string>
    <string name="setting_tv_character">캐릭터 이름</string>
    <string name="setting_tv_userTasteTitle">장르 취향을 선택해주세요.</string>
    <string name="setting_btn_userTaste">취향관리</string>
    <string name="setting_btn_userInfo">정보관리</string>
    <string name="setting_user_email">test@test.com</string>
    <string name="setting_ticket">사용중인 이용권이 없습니다.</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_center">고객센터</string>
    <string name="setting_songPlay">곡 재생 설정</string>
    <string name="setting_video">영상 설정</string>
    <string name="setting_store">저장 설정</string>
    <string name="setting_app">앱 설정</string>
    <string name="setting_voiceService">음성인식(NUGU) 서비스 설정</string>
    <string name="setting_version">버전정보</string>
    <string name="setting_versionText">현재버젼 5.5.0</string>
    <string name="userInfoSetting_title">정보관리</string>
    <string name="userInfoSetting_buyTicket">이용권 구매</string>
    <string name="userInfoSetting_btn_verify">인증하기</string>
    <string name="userInfoSetting_changeNumber">휴대폰 번호 변경</string>
    <string name="userInfoSetting_OTP">일회용 인증번호 (OTP)</string>
    <string name="userInfoSetting_verifyUser">본인 인증</string>
    <string name="userInfoSetting_verifyUser_msg">SK pay등 결제를 위해 본인인증을 진행합니다.</string>
    <string name="userInfoSetting_verifySKT">SKT 회원 인증</string>
    <string name="userInfoSetting_verifySKT_msg">SK 텔레콤 회원의 혜택을 위해 본인인증을 진행합니다.</string>
    <string name="userInfoSetting_verifyAdult">성인인증</string>
    <string name="userInfoSetting_verifyAdult_msg1">19세 미만 재생 불가곡 감상을 위해</string>
    <string name="userInfoSetting_verifyAdult_msg2">본인인증을 진행합니다.</string>
    <string name="userInfoSetting_logout">로그아웃</string>
    <string name="userInfoSetting_userDelete">회원 탈퇴</string>
    <string name="home_before1_title">오늘 발매 음악</string>
    <string name="home_before2_title">귀가 트이는 FLO 오디오 오리지널</string>
    <string name="home_before3_title">인기 팟캐스트 FLO에서 만나요</string>
    <string name="home_before4_title">장르 콜렉션</string>
    <string name="home_before5_title">비디오 콜렉션</string>
    <string name="home_before6_title">2021 Book Start! 윌라 오디오북</string>
    <string name="home_before7_title">Editor\'s Pick</string>
    <string name="home_before8_title">비디오 콜렉션</string>
    <string name="home_bottom_company">(주)드림어스컴퍼니 사업자 정보 ></string>
    <string name="home_btn_try_get_http_method">GET API 보내기</string>
    <string name="home_btn_try_post_http_method">POST API 보내기</string>
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>
    <string name="home_rv_item_title">Title</string>
    <string name="home_rv_item_singer">Singer</string>
    <string name="browse_chart">차트</string>
    <string name="browse_chart_title">차트</string>
    <string name="browse_chart_FLO">FLO 차트</string>
    <string name="browse_chart_listenAll">전체듣기</string>
    <string name="browse_chart_FLO_updateTime">01:00 업데이트</string>
    <string name="browse_chart_rise">지금 급상승 중</string>
    <string name="browse_chart_rise_updateTime">00:50 업데이트</string>
    <string name="browse_chart_rise_msg">10분마다 달라지는 시시각각 많이 듣는 곡!</string>
    <string name="browse_chart_pop">해외 소셜 차트</string>
    <string name="browse_chart_pop_updatePeroid">12/29 ~ 01/04</string>
    <string name="browse_chart_pop_msg">유튜브, 틱톡 등 글로벌 트랜드를 한 눈에!</string>
    <string name="browse_movie">영상</string>
    <string name="browse_movie_title_image_title">[MV] 우리는 지구에서 모래성을 만들어</string>
    <string name="browse_movie_title_image_singer">19 (NANA)</string>
    <string name="browse_genre">장르</string>
    <string name="browse_situation">상황</string>
    <string name="browse_mood">분위기</string>
    <string name="browse_chart_item_index">1</string>
    <string name="browse_chart_item_musicTitle">노래제목</string>
    <string name="browse_chart_item_musicSinger">노래가수</string>
    <string name="search_hint">검색어를 입력하세요.</string>
    <string name="search_riseMusic">급상승 검색어</string>
    <string name="search_date_time">2021.01.04 16:00 기준</string>
    <string name="storage_login">로그인</string>
    <string name="storage_store_song">저장한 곡</string>
    <string name="storage_store_empty">저장한 곡이 없습니다.</string>
    <string name="storage_characterNickName">캐릭터1</string>
    <string name="storage_list_msg1">내 리스트가 없습니다.</string>
    <string name="storage_list_msg2">새로운 리스트를 만들어주세요.</string>
    <string name="storage_make_new_list">새로운 리스트 만들기</string>
    <string name="storage_capture_image">캡쳐 이미지로 만들기</string>
    <string name="storage_capture_image_msg">자동으로 내 리스트를 만들어 드립니다.</string>
    <string name="storage_addFolder_title">내 리스트 명</string>
    <string name="storage_addFolder_hint">내 리스트 이름을 입력해주세요.</string>
    <string name="storage_addFolder_ok">확인</string>
    <string name="storage_addFolder_cancel">취소</string>
    <string name="addMusicList_title">곡 추가하기</string>
    <string name="addMusicList_playList">재생목록</string>
    <string name="addMusicList_like">좋아요 한 곡</string>
    <string name="addMusicList_recently">최근 들은 곡</string>
    <string name="addMusicList_selectAll">전체선택</string>
    <string name="addMusicList_noPlayList">재생목록이 없습니다.</string>
    <string name="addMusicList_addButton">+ 추가하기</string>
    <string name="myList_editList">편집</string>
    <string name="myList_songCount">곡</string>
    <string name="recommendMusic_title">유사곡</string>
    <string name="recommendMusic_btn">전체듣기</string>
    <string name="musicList_title">재생목록</string>
    <string name="musicList_edit">편집</string>
    <string name="musicList_closeGroup">그룹 접기</string>
    <string name="musicList_selectSong">선택곡</string>
    <string name="musicSetting_title">노래제목</string>
    <string name="musicSetting_singer">가수</string>
    <string name="musicSetting_songInfo">곡 정보</string>
    <string name="musicSetting_albumInfo">앨범 정보</string>
    <string name="musicSetting_artistInfo">아티스트 정보</string>
    <string name="musicSetting_putStorage">내 리스트에 담기</string>
    <string name="musicSetting_songInfoMore">더 알아보기 JUMP</string>
    <string name="musicSetting_downLoad">저장하기</string>
    <string name="musicSetting_shareStory">스토리 공유하기</string>
    <string name="musicSetting_shareLink">링크 공유하기</string>
    <string name="musicSetting_delete">삭제</string>
    <string name="songInfo_musicTitle">밤하늘의 별을 (2020)</string>
    <string name="songInfo_musicSinger">경서</string>
    <string name="songInfo_tab_detail">상세정보</string>
    <string name="songInfo_tab_similar">유사곡</string>
    <string name="songInfo_tab_video">영상</string>
    <string name="songInfo_songTitleMsg">곡명</string>
    <string name="songInfo_lyricsWriterMsg">작사</string>
    <string name="songInfo_lyricsWriter">강봄</string>
    <string name="songInfo_songWriterMsg">작곡</string>
    <string name="songInfo_songWriter">강봄</string>
    <string name="songInfo_editSongMsg">편곡</string>
    <string name="songInfo_songEditor">양정승 (Kiroy Y)</string>
    <string name="login_email_hint">아이디(이메일)</string>
    <string name="login_email_atMark">\@</string>
    <string name="login_domain_hint">선택</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_emailLogin">로그인</string>
    <string name="login_signUp">회원가입</string>
    <string name="login_skt_login">아이디로 로그인</string>
    <string name="login_phoneNumber_login">휴대폰 번호로 로그인</string>
    <string name="selectTaste_title">어떤 음악을 좋아하세요?</string>
    <string name="selectTaste_title_msg">취향을 선택하고 나에게 맞는 홈을 받아보세요</string>
    <string name="selectTaste_artist_title">아티스트</string>
    <string name="selectTaste_chart_title">차트</string>
    <string name="selectTaste_genre_title">장르</string>
    <string name="selectTaste_title1">국내 발라드</string>
    <string name="selectTaste_title2">국내 댄스</string>
    <string name="selectTaste_title3">팝</string>
    <string name="selectTaste_recycler_item_name">Singer</string>
    <string name="naver_client_id">xkmRuKwyOxH3PbM0HgHQ</string>
    <string name="naver_client_secret">OvsYCCmwPt</string>
    <string name="naver_client_name">Flo_A_Jeffrey</string>
    <string name="kakao_app_key">1b8e04ccf325b354703c46c27ac676eb</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_title_message">FLO에 오신 것을 환영합니다.</string>
    <string name="signup_email_login">이메일 아이디로 가입하기</string>
    <string name="signup_skt_login">아이디로 가입하기</string>
    <string name="signup_naver_login">네이버 아이디로 가입하기</string>
    <string name="signup_kakao_login">카카오 계정으로 가입하기</string>
    <string name="signup_apple_login">Apple로 로그인</string>
    <string name="checkList_title">이용약관</string>
    <string name="checkList_essential">(필수)</string>
    <string name="checkList_message1">개인정보 수집 및 이용 안내</string>
    <string name="checkList_message2">제 3자 제공 동의</string>
    <string name="checkList_select">(선택)</string>
    <string name="checkList_message3">제 3자 제공, 처리위탁 동의</string>
    <string name="checkList_message4">광고 수신 동의</string>
    <string name="checkList_selectAll">전체 동의</string>
    <string name="checkList_selectAll_message">광고 수신 동의를 포함하여 모두 동의합니다.</string>
    <string name="checkList_detail">보기</string>
    <string name="checkList_next">다음</string>
    <string name="verify_title">본인인증</string>
    <string name="verify_name">이름</string>
    <string name="verify_name_error">올바른 이름 형식이 아닙니다.</string>
    <string name="verify_phoneNumber">휴대폰 번호 (-제외)</string>
    <string name="verify_sendSMS">인증번호 전송</string>
    <string name="verify_resendSMS">재전송</string>
    <string name="verify_btn_anim">"인증번호가 재전송되었습니다.</string>
    <string name="verify_smsCode">인증번호</string>
    <string name="verify_smsCodeError">인증번호가 일치하지 않습니다.</string>
    <string name="verify_successVerification">본인인증 완료</string>
    <string name="makeUser_title">회원가입</string>
    <string name="makeUser_userName">이름:</string>
    <string name="makeUser_tempName">김OO</string>
    <string name="makeUser_between">/</string>
    <string name="makeUser_userPhoneNumber">휴대폰 번호:</string>
    <string name="makeUser_tempPhoneNumber">01012345678</string>
    <string name="makeUser_userEmail">아이디(이메일)</string>
    <string name="makeUser_domain">선택</string>
    <string name="makeUser_userPassword">비밀번호</string>
    <string name="makeUser_verifyUserPassword">비밀번호확인</string>
    <string name="makeUser_birth">생년월일(ex.900726)</string>
    <string name="makeUser_successMake">가입완료</string>
</resources>