<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".src.main.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home_button_try_get_jwt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/home_btn_try_get_http_method" />

    <EditText
        android:id="@+id/home_et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/home_et_id" />

    <EditText
        android:id="@+id/home_et_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/home_et_pw" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home_btn_try_post_http_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/home_btn_try_post_http_method" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/home_et_word"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="검색어를 입력하세요."/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="검색"/>
    </LinearLayout>
</LinearLayout>